--- a/src/index.html
+++ b/src/index.html
@@ -14,14 +14,11 @@
   </head>
   <body>
     <div class="container-fluid text-center">
-      <h1 class="mt-5">Hello Rigo!</h1>
+      <h1 class="mt-5">Excuse Generator</h1>
       <img src="./rigo-baby.jpg" />
-      <p class="alert alert-warning mt-4">
-        If this text is <b>not</b> centered and <b>yellow</b>, you probably have
-        an error
-      </p>
+      <p id="excuse">My dog ate my homework</p>
       <div class="fixed-bottom p-4">
-        Made with ❤️ by
+        Made with ❤️ by Dariel
         <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
       </div>
     </div>
